--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../sass/main.scss">
         <script defer="defer" src="../js/app.js"></script>
     </head>
-    <body>
-        {{> index_body }}
+    <body class="h-screen">
+        {{> sign_up_body }}
     </body>
 </html>
