--- a/src/views/sign_up.hbs
+++ b/src/views/sign_up.hbs
@@ -5,11 +5,13 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Result</title>
+        <title>Sign Up</title>
         <link rel="stylesheet" href="../sass/main.scss">
         <script defer="defer" src="../js/app.js"></script>
     </head>
-    <body class="bg-[#000000]">
-        {{> result_body }}
+    <body>
+        {{> sign_up_body }}
+        
+
     </body>
 </html>
