sign up page done

--- a/src/views/partials/sign_up_body.hbs
+++ b/src/views/partials/sign_up_body.hbs
@@ -24,16 +24,16 @@
             <input type="password" placeholder="Confirm Password">
           </div>
         </div>
-        <div class="submit-area flex gap-4 justify-between items-center pl-5 mt-10">
+        <div class="submit-area flex gap-10 justify-between items-center pl-5 mt-10">
           <div class="social-login">
             <ul class="flex justify-start items-center gap-5">
-              <li><img class="w-10 h-10" src="/images/svg/google.svg" alt=""></li>
-              <li><img class="w-10 h-10" src="/images/svg/apple.svg" alt=""></li>
+              <li><img class="min-w-11 h-11" src="/images/svg/google.svg" alt=""></li>
+              <li><img class="min-w-11 h-11" src="/images/svg/apple.svg" alt=""></li>
             </ul>
           </div>
-          <div class="sub-btn">
+          <div class="sub-btn w-full">
             <button
-              class="border-0 outline-none py-3 px-8 bg-primary text-primary-0 font-satoshi font-medium rounded-s-2xl ">Create
+              class="border-0 outline-none py-3.5 px-8 bg-primary text-primary-0 font-satoshi font-medium rounded-s-2xl w-full block ">Create
               account</button>
           </div>
         </div>
