sign in and forgot password page design

--- a/src/views/partials/sign_up_body.hbs
+++ b/src/views/partials/sign_up_body.hbs
@@ -11,7 +11,7 @@
       <p class="text-primary-1 text-base font-satoshi font-medium not-italic">Already have an account? <span
           class="text-primary font-satoshi font-bold not-italic">Sign in here.</span></p>
     </div>
-    <div class="form-area">
+    <div class="sign-form-area">
       <form action="">
         <div class="form-input-area px-5">
           <div class="form-input">
