--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,41 +1,47 @@
 @import'./variables';
 
-/** GLOBAL SCSS CODE ***/
+body {
+    background-color: #f7f7f7;
+}
 .container {
     max-width: 450px;
     margin-inline: auto;
     min-height: 100vh;
 }
 
-body {
-    background-color: #f7f7f7;
-}
+
 
 /** GLOBAL FORM INPUT STYLE ***/
-
-.form-input {
-    input {
-        display: block;
-        width: 100%;
-        border: none;
-        border-bottom: 1px solid $border-color;
-        font-family: $font-en-primary;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        padding-block: 15px;
-        outline: none;
-        color: $input-text-color;
-
-        &::placeholder {
-            color: #BBBBBB;
-        }
-
-        &:-webkit-autofill {
+.sign-form-area{
+    .form-input {
+        input {
+            display: block;
+            width: 100%;
+            border: none;
             border-bottom: 1px solid $border-color;
-            -webkit-text-fill-color: $input-text-color;
-            -webkit-box-shadow: 0 0 0px 1000px $color-white inset;
-            transition: background-color 5000s ease-in-out 0s;
+            font-family: $font-en-primary;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            padding-block: 15px;
+            outline: none;
+            color: $input-text-color;
+    
+            &::placeholder {
+                color: #BBBBBB;
+            }
+    
+            &:-webkit-autofill {
+                border-bottom: 1px solid $border-color;
+                -webkit-text-fill-color: $input-text-color;
+                -webkit-box-shadow: 0 0 0px 1000px $color-white inset;
+                transition: background-color 5000s ease-in-out 0s;
+            }
         }
     }
+}
+.sign-in-area{
+    box-shadow: 0px -15px 30px 0px rgb(0 0 0 / 10%);
+    top: -50px;
+    border-radius: 40px 40px 0px 0px;
 }
