--- a/src/views/forgot_password.hbs
+++ b/src/views/forgot_password.hbs
@@ -5,12 +5,11 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Home</title>
+        <title>Reset Password</title>
         <link rel="stylesheet" href="../sass/main.scss">
         <script defer="defer" src="../js/app.js"></script>
     </head>
-    <body class="h-screen">
-        {{!-- {{> forgot_password_body}} --}}
-        {{> sign_in_body}}
+    <body>
+        {{> forgot_password_body}}
     </body>
 </html>
