--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import'./swipper';
 // @import "@fortawesome/fontawesome-free/scss/fontawesome";
 // @import "@fortawesome/fontawesome-free/scss/solid";
 // @import "@fortawesome/fontawesome-free/scss/regular";
