--- a/src/views/partials/forgot_password_body.hbs
+++ b/src/views/partials/forgot_password_body.hbs
@@ -6,7 +6,7 @@
     </div>
     <div class="forgot-section mt-12 sm:px-6 px-5">
           <div class="forgot-title mb-12 text-center">
-                <h3 class="font-satoshi font-bold not-italic text-2xl mb-1">Forget Password?</h3>
+                <h3 class="font-satoshi font-bold not-italic text-26/[30px] mb-1">Forget Password?</h3>
                 <p class="text-primary-1 text-base font-satoshi font-medium not-italic">Enter your email or phone number</p>
           </div>
           <div class="forgot-form-area">
