recent post page and notice details page

--- a/src/views/partials/notice_list_body.hbs
+++ b/src/views/partials/notice_list_body.hbs
@@ -74,7 +74,7 @@
                 <div class="list-card-img">
                     <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
                 </div>
-                <div class="list-card-body">
+                <div class="list-card-body ">
                     <span class="font-satoshi font-medium not-italic text-primary-1 text-sm">22/09/2023</span>
                     <h3 class="font-satoshi font-medium not-italic text-18/[23px] text-primary-10">It's important to
                         follow the manufacturer's </h3>
@@ -82,7 +82,7 @@
             </div>
 
             <div
-                class="list-card mb-4 rounded-20 bg-primary-0 sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+                class="list-card  rounded-20 bg-primary-0 sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
                 <div class="list-card-img">
                     <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
                 </div>
@@ -93,7 +93,10 @@
                 </div>
             </div>
 
-
         </div>
     </div>
+
+    <div class="gradient-shape bg-bottom-gradient w-full fixed bottom-0 left-0 h-11"></div>
+    
+
 </div>
