--- a/src/views/partials/sign_up_body.hbs
+++ b/src/views/partials/sign_up_body.hbs
@@ -1,5 +1,5 @@
 <div class="container min-h-screen bg-primary-0">
-  <div class="sign-up-banner p-5">
+  <div class="sign-up-banner p-5 py-4">
     <div class="sign-up-banner-main">
       <img class="w-full object-contain mx-auto" src="/images/png/sign-up-banner.png" alt="">
     </div>
@@ -15,13 +15,13 @@
       <form action="">
         <div class="form-input-area px-5">
           <div class="form-input">
-            <input type="text" placeholder="Text Field">
+            <input type="text" class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid" placeholder="Text Field">
           </div>
           <div class="form-input">
-            <input type="password" placeholder="Password">
+            <input type="password" class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid" placeholder="Password">
           </div>
           <div class="form-input">
-            <input type="password" placeholder="Confirm Password">
+            <input type="password" class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid" placeholder="Confirm Password">
           </div>
         </div>
         <div class="submit-area flex gap-10 justify-between items-center pl-5 mt-10">
