--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,46 +1,27 @@
-@import'./variables';
 
 body {
     background-color: #f7f7f7;
 }
-
 .container {
     max-width: 450px;
     margin-inline: auto;
 }
-
-
-
 /** GLOBAL FORM INPUT STYLE ***/
 .sign-form-area {
     .form-input {
         input {
-            display: block;
-            width: 100%;
-            border: none;
-            border-bottom: 1px solid $border-color;
-            font-family: $font-en-primary;
-            font-style: normal;
-            font-weight: 500;
-            font-size: 16px;
-            padding-block: 15px;
-            outline: none;
-            color: $input-text-color;
-
             &::placeholder {
                 color: #BBBBBB;
             }
-
             &:-webkit-autofill {
-                border-bottom: 1px solid $border-color;
-                -webkit-text-fill-color: $input-text-color;
-                -webkit-box-shadow: 0 0 0px 1000px $color-white inset;
+                border-bottom: 1px solid #BBBBBB;
+                -webkit-text-fill-color: #5A5A5A;
+                -webkit-box-shadow: 0 0 0px 1000px #fff inset;
                 transition: background-color 5000s ease-in-out 0s;
             }
         }
     }
 }
-
 .sign-in-area {
     box-shadow: 0px -15px 30px 0px rgb(0 0 0 / 10%);
     top: -50px;
