--- a/src/sass/_swipper.scss
+++ b/src/sass/_swipper.scss
@@ -6,19 +6,14 @@
     .swiper-pagination{
         bottom: 0px!important;
     }
-    // .swiper-slide {
-    //     transition: all 0.3s linear;
-    //     transform: scale(0.9)!important;
-    // }
-    // .swiper-slide-active{
-    //     transform: scale(1)!important;
-    // }
     .swiper-pagination-bullet{
         background-color: #EBEBEB!important;
+        opacity: 1;
+        &.swiper-pagination-bullet-active{
+            background-color: #EF233C!important;
+        }
     }
-    .swiper-pagination-bullet-active{
-        background-color: #EF233C!important;
-    }
+   
 }
 
 
