--- a/src/views/partials/components/bottom_nav.hbs
+++ b/src/views/partials/components/bottom_nav.hbs
@@ -2,7 +2,7 @@
     <div class="container min-h-auto ">
         <div class="bottom-nav-main">
             <ul class="flex items-center justify-between gap-3">
-                <li class="w-full text-center flex gap-1 justify-center flex-col py-1 px-1">
+                <li class="w-full text-center flex  justify-center flex-col py-1 px-1">
                     <div class="icon">
                         <img src="/images/svg/home.svg" alt="" class="w-5 h-5 m-auto">
                     </div>
@@ -10,7 +10,7 @@
                         <span class="font-satoshi font-medium text-xs text-primary-0.5">Home</span>
                     </div>
                 </li>
-                <li class="w-full text-center flex gap-1 justify-center flex-col py-1 px-1">
+                <li class="w-full text-center flex  justify-center flex-col py-1 px-1">
                     <div class="icon">
                         <img src="/images/svg/post.svg" alt="" class="w-5 h-5 m-auto">
                     </div>
@@ -18,7 +18,7 @@
                         <span class="font-satoshi font-medium text-xs text-primary-0.5">Post</span>
                     </div>
                 </li>
-                <li class="w-full text-center flex gap-1 justify-center flex-col py-1 px-2">
+                <li class="w-full text-center flex  justify-center flex-col py-1 px-2">
                     <div class="icon">
                         <img src="/images/svg/user.svg" alt="" class="w-5 h-5 m-auto">
                     </div>
@@ -26,7 +26,7 @@
                         <span class="font-satoshi font-medium text-xs text-primary-0.5">Account</span>
                     </div>
                 </li>
-                <li class="w-full text-center flex gap-1 justify-center flex-col py-1 px-2">
+                <li class="w-full text-center flex  justify-center flex-col py-1 px-2">
                     <div class="icon">
                         <img src="/images/svg/setting.svg" alt="" class="w-5 h-5 m-auto">
                     </div>
