--- a/src/views/partials/sign_in_body.hbs
+++ b/src/views/partials/sign_in_body.hbs
@@ -13,10 +13,10 @@
             <form action="">
                 <div class="form-input-area  sm:px-6 px-5">
                     <div class="form-input">
-                        <input type="email" placeholder="Email">
+                        <input type="email" class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid" placeholder="Email">
                     </div>
                     <div class="form-input">
-                        <input type="password" placeholder="Password">
+                        <input type="password" class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid" placeholder="Password">
                     </div>
                 </div>
                 <div class="submit-area flex gap-10 justify-between items-center  sm:p-6 pl-5 mt-10">
