recently post details page design

--- a/src/views/partials/index_body.hbs
+++ b/src/views/partials/index_body.hbs
@@ -4,28 +4,11 @@
             <span class="font-satoshi font-bold text-primary block cursor-pointer">Skip</span>
         </div>
         <div class="section-main">
-            <div class="section-slide-area">
-                <div class="swiper w-full h-full">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="swiper-slide-img">
-                                <img src="/images/png/slide.png" alt="">
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper-slide-img">
-                                <img src="/images/png/slide.png" alt="">
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper-slide-img">
-                                <img src="/images/png/slide.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                </div>
+
+            <div class="carousel">
+                {{> components/carousels/carousel}}
             </div>
+
 
             <div class="section-body py-5 sm:px-7 px-4 text-center">
                 <h3 class="font-satoshi font-bold not-italic text-primary-10 text-26/[44px] mb-2.5">Next to view live
