--- a/src/views/recent_post_details.hbs
+++ b/src/views/recent_post_details.hbs
@@ -1,4 +1,4 @@
-<!doctype html>
+000<!doctype html>
 <html lang="en">
 
 <head>
@@ -6,7 +6,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Recent Post Details</title>
     <link rel="stylesheet" href="../sass/main.scss">
     <script defer="defer" src="../js/app.js"></script>
     <!---SWIPER CSS FILE ---->
@@ -17,5 +17,4 @@
 <body class="h-screen">
     {{> recent_post_details_body}}
 </body>
-
 </html>
