--- a/src/views/sign_in.hbs
+++ b/src/views/sign_in.hbs
@@ -10,6 +10,6 @@
         <script defer="defer" src="../js/app.js"></script>
     </head>
     <body>
-        {{> sign_up_body }}
+        {{> sign_in_body }}
     </body>
 </html>
