--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -24,6 +24,6 @@ body {
 }
 .sign-in-area {
     box-shadow: 0px -15px 30px 0px rgb(0 0 0 / 10%);
-    top: -50px;
-    border-radius: 40px 40px 0px 0px;
+    border-radius: 50px 50px 0px 0px;
+    min-height: calc(100vh - 400px);
 }
