--- a/src/views/partials/index_body.hbs
+++ b/src/views/partials/index_body.hbs
@@ -1,7 +1,7 @@
 <div class="container min-h-screen  bg-primary-0">
     <div class="section">
-        <div class="section-top text-right py-4 sm:px-6 px-4 mb-3">
-            <span class="font-satoshi font-bold text-primary block cursor-pointer">Skip</span>
+        <div class="section-top text-right py-4 sm:px-6 px-4 mb-[12px]">
+            <span class="font-satoshi font-bold text-primary block cursor-pointer text-[15px]/[20px]">Skip</span>
         </div>
         <div class="section-main">
 
@@ -10,14 +10,15 @@
             </div>
 
 
-            <div class="section-body py-5 sm:px-7 px-4 text-center">
-                <h3 class="font-satoshi font-bold not-italic text-primary-10 text-26/[44px] mb-2.5">Next to view live
+            <div class="section-body py-[28px] sm:px-7 px-4 text-center">
+                <h3 class="font-satoshi font-bold not-italic text-primary-10 text-26/[44px] mb-[12px]">Next to view live
                     scores</h3>
-                <p class="text-primary-1 text-base font-medium font-satoshi max-w-96 m-auto">In-depth coverage of
+                <p class="text-primary-1 text-[14px]/[20px] font-medium font-satoshi max-w-[280px] m-auto">In-depth
+                    coverage of
                     Soccer, basketball, baseball, E-sport Livescore keeps you well informed of live
                     scores</p>
                 <button
-                    class="text-base mt-8 bg-primary w-full block text-primary-0 font-satoshi font-bold py-3 px-4 rounded-2xl">Next</button>
+                    class="text-base/[20px] mt-[28px] bg-primary h-[56px] flex items-center justify-center w-full text-primary-0 font-satoshi font-bold py-3 px-4 rounded-[20px]">Next</button>
             </div>
         </div>
     </div>
