--- a/src/views/partials/reset_password_body.hbs
+++ b/src/views/partials/reset_password_body.hbs
@@ -1,36 +1,41 @@
 <div class="container min-h-screen bg-primary-0">
-    <div class="back-area py-4 px-4 sm:px-6">
+    <div class="back-area py-4 px-[26px]">
         <div class="back-area-icon">
             <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt="">
         </div>
     </div>
-    <div class="forgot-section mt-12 sm:px-6 px-4">
-        <div class="forgot-title mb-12 text-center">
-            <h3 class="font-satoshi font-bold not-italic text-26/[30px] mb-2">Reset Password</h3>
+    <div class="forgot-section mt-[35px]  px-[26px]">
+        <div class="forgot-title mb-[46px] text-center">
+            <h3 class="font-satoshi font-bold not-italic text-[24px]/[30px] mb-[10px]">Reset Password</h3>
             <p class="text-primary-1 text-base font-satoshi font-medium not-italic">Remember your password this time</p>
         </div>
+
         <div class="forgot-form-area">
-            <form action="">
-                <div class="form-input mb-5">
-                    <label class="font-satoshi font-medium text-sm/[17px] block mb-3 px-1">Current Password</label>
-                    <input type="password" placeholder="Enter your Password"
-                        class="bg-primary-0.1 block w-full py-3 px-3 font-satoshi font-medium text-base  rounded-lg outline-none">
-                </div>
-                <div class="form-input mb-5">
-                    <label class="font-satoshi font-medium text-sm/[17px] block mb-3 px-1">New Password</label>
-                    <input type="password" placeholder="Enter your Password"
-                        class="bg-primary-0.1 block w-full py-3 px-3 font-satoshi font-medium text-sm  rounded-lg outline-none">
-                </div>
+            <form action="#">
+                <div class="form-main">
+                    <div class="form-input mb-6">
+                        <label class="font-satoshi font-medium text-[14px]/[20px] block mb-3 px-1">Current
+                            Password</label>
+                        <input type="password" placeholder="Enter your Password"
+                            class="bg-primary-0.1  w-full py-1 flex items-center justify-start h-[50px] px-3 text-start font-satoshi font-medium text-base  rounded-[20px] outline-none">
+                    </div>
+                    <div class="form-input mb-6">
+                        <label class="font-satoshi font-medium text-[14px]/[20px]block mb-3 px-1">New Password</label>
+                        <input type="password" placeholder="Enter your Password"
+                            class="bg-primary-0.1  w-full py-1 flex items-center justify-start h-[50px] px-3 text-start font-satoshi font-medium text-base  rounded-[20px] outline-none">
+                    </div>
 
-                <div class="form-input mb-5">
-                    <label class="font-satoshi font-medium text-sm/[17px] block mb-3 px-1">Confirm New Password</label>
-                    <input type="password" placeholder="Enter New Password"
-                        class="bg-primary-0.1 block w-full py-3 px-3 font-satoshi font-medium text-base  rounded-lg outline-none">
-                </div>
+                    <div class="form-input mb-6">
+                        <label class="font-satoshi font-medium text-[14px]/[20px] block mb-3 px-1">Confirm New
+                            Password</label>
+                        <input type="password" placeholder="Enter New Password"
+                            class="bg-primary-0.1  w-full py-1 flex items-center justify-start h-[50px] px-3 text-start font-satoshi font-medium text-base  rounded-[20px] outline-none">
+                    </div>
 
-                <div class="sub-btn mt-48">
+                </div>
+                <div class="sub-btn mt-[89%]">
                     <button
-                        class="bg-primary py-3 rounded-2xl px-3 block font-satoshi font-bold text-primary-0 w-full text-lg">Change
+                        class="bg-primary py-1 rounded-[20px] px-3 flex items-center justify-center h-[56px] font-satoshi font-bold text-primary-0 w-full text-base">Change
                         Password</button>
                 </div>
             </form>
