--- a/src/views/partials/sign_in_body.hbs
+++ b/src/views/partials/sign_in_body.hbs
@@ -5,13 +5,13 @@
         </div>
     </div><!--END SIGN UP BANNER AREA --->
 
-    <div class="sign-in-area shadow-md bg-primary-0 relative pt-10 top-1 z-11" >
-        <div class="sign-up-area-title sm:px-6 px-5 sm:mb-6 mb-5">
-            <h3 class="font-satoshi font-bold not-italic text-3xl  ">Sign in</h3>
+    <div class="sign-in-area shadow-md bg-primary-0 relative pt-[40px] top-1 z-11" >
+        <div class="sign-up-area-title  px-[28px] mb-[30px]">
+            <h3 class="font-satoshi font-bold not-italic text-26/[44px]">Sign in</h3>
         </div>
         <div class="sign-form-area">
             <form action="">
-                <div class="form-input-area  sm:px-6 px-5">
+                <div class="form-input-area  px-[28px]">
                     <div class="form-input">
                         <input type="email" class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid" placeholder="Email">
                     </div>
@@ -19,9 +19,9 @@
                         <input type="password" class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid" placeholder="Password">
                     </div>
                 </div>
-                <div class="submit-area flex gap-10 justify-between items-center  sm:p-6 pl-5 mt-10">
+                <div class="submit-area flex gap-[49px] justify-between items-center pl-[28px] mt-[40px]">
                     <div class="social-login">
-                        <ul class="flex justify-start items-center gap-5">
+                        <ul class="flex justify-start items-center gap-[16px]">
                             <li><img class="min-w-11 h-11 cursor-pointer" src="/images/svg/google.svg" alt=""></li>
                             <li><img class="min-w-11 h-11 cursor-pointer" src="/images/svg/facebook.svg" alt=""></li>
                             <li><img class="min-w-11 h-11 cursor-pointer" src="/images/svg/apple.svg" alt=""></li>
@@ -29,11 +29,12 @@
                     </div>
                     <div class="sub-btn w-full">
                         <button
-                            class="border-0 outline-none py-3.5 px-8 bg-primary text-primary-0 font-satoshi font-medium rounded-s-2xl w-full block cursor-pointer">Sign
+                            class="border-0 outline-none py-1 flex items-center justify-center h-[56px] px-8 bg-primary text-primary-0 font-satoshi font-medium rounded-s-[20px] w-full cursor-pointer text-[16px]/[20px]">Sign
                             in</button>
                     </div>
                 </div>
-                <div class="create-account mt-5 flex justify-between items-center py-5   sm:px-6 px-5">
+
+                <div class="create-account mt-[64px] flex justify-between items-center pb-[40px]   px-[28px]">
                      <a href="#" class="text-primary-1 text-base font-satoshi font-bold not-italic">Sign Up</a>
                      <a href="#" class="text-primary text-base font-satoshi font-bold not-italic">Forgot password</a>
                 </div>
