--- a/src/views/partials/sign_up_body.hbs
+++ b/src/views/partials/sign_up_body.hbs
@@ -1,43 +1,52 @@
 <div class="container min-h-screen bg-primary-0">
-  <div class="sign-up-banner p-5 py-4">
+  <div class="sign-up-banner px-[27px] py-4">
     <div class="sign-up-banner-main">
       <img class="w-full object-contain mx-auto" src="/images/png/sign-up-banner.png" alt="">
     </div>
   </div><!--END SIGN UP BANNER AREA --->
 
   <div class="sign-up-area">
-    <div class="sign-up-area-title p-5 mb-4">
-      <h3 class="font-satoshi font-bold not-italic text-3xl mb-6 ">Let’s sign you up.</h3>
-      <p class="text-primary-1 text-base font-satoshi font-medium not-italic">Already have an account? <span
+    <div class="sign-up-area-title px-[27px] pt-[30px] pb-[20px] mb-[20px]">
+      <h3 class="font-satoshi font-bold not-italic text-26/[44px] mb-[12px] ">Let’s sign you up.</h3>
+      <p class="text-primary-1 text-[14px]/[20px] font-satoshi font-medium not-italic">Already have an account? <span
           class="text-primary font-satoshi font-bold not-italic">Sign in here.</span></p>
     </div>
     <div class="sign-form-area">
       <form action="">
-        <div class="form-input-area px-5">
+        <div class="form-input-area px-[27px]">
           <div class="form-input">
-            <input type="text" class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid" placeholder="Text Field">
+            <input type="text"
+              class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid"
+              placeholder="Text Field">
           </div>
           <div class="form-input">
-            <input type="password" class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid" placeholder="Password">
+            <input type="password"
+              class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid"
+              placeholder="Password">
           </div>
           <div class="form-input">
-            <input type="password" class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid" placeholder="Confirm Password">
+            <input type="password"
+              class=" py-4 outline-none text-base font-medium not-italic block w-full font-satoshi text-primary-1 border-b border-primary-0.5 border-solid"
+              placeholder="Confirm Password">
           </div>
         </div>
-        <div class="submit-area flex gap-10 justify-between items-center pl-5 mt-10">
+        <div class="submit-area flex gap-[49px] justify-between items-center pl-[27px] pb-[46px] mt-[46px]">
           <div class="social-login">
-            <ul class="flex justify-start items-center gap-5">
-              <li><img class="min-w-11 h-11" src="/images/svg/google.svg" alt=""></li>
-              <li><img class="min-w-11 h-11" src="/images/svg/apple.svg" alt=""></li>
+            <ul class="flex justify-start items-center gap-[16px]">
+              <li><img class="min-w-11 h-11 cursor-pointer" src="/images/svg/google.svg" alt=""></li>
+              <li><img class="min-w-11 h-11 cursor-pointer" src="/images/svg/apple.svg" alt=""></li>
             </ul>
           </div>
+
           <div class="sub-btn w-full">
             <button
-              class="border-0 outline-none py-3.5 px-8 bg-primary text-primary-0 font-satoshi font-medium rounded-s-2xl w-full block ">Create
-              account</button>
+              class="border-0 outline-none py-1 flex items-center justify-center h-[56px] px-8 bg-primary text-primary-0 font-satoshi font-medium rounded-s-[20px] w-full cursor-pointer text-[16px]/[20px]">Sign
+              Up</button>
           </div>
         </div>
+
       </form>
     </div>
+    
   </div>
 </div>
