--- a/src/views/partials/reset_password_body.hbs
+++ b/src/views/partials/reset_password_body.hbs
@@ -20,7 +20,7 @@
                             class="bg-primary-0.1  w-full py-1 flex items-center justify-start h-[50px] px-3 text-start font-satoshi font-medium text-base  rounded-[20px] outline-none">
                     </div>
                     <div class="form-input mb-6">
-                        <label class="font-satoshi font-medium text-[14px]/[20px]block mb-3 px-1">New Password</label>
+                        <label class="font-satoshi font-medium text-[14px]/[20px] block mb-3 px-1">New Password</label>
                         <input type="password" placeholder="Enter your Password"
                             class="bg-primary-0.1  w-full py-1 flex items-center justify-start h-[50px] px-3 text-start font-satoshi font-medium text-base  rounded-[20px] outline-none">
                     </div>
@@ -33,7 +33,7 @@
                     </div>
 
                 </div>
-                <div class="sub-btn mt-[89%]">
+                <div class="sub-btn mt-[170px]">
                     <button
                         class="bg-primary py-1 rounded-[20px] px-3 flex items-center justify-center h-[56px] font-satoshi font-bold text-primary-0 w-full text-base">Change
                         Password</button>
