design feadback issue solved

--- a/src/views/partials/account_body.hbs
+++ b/src/views/partials/account_body.hbs
@@ -1,6 +1,6 @@
-<div class="container min-h-screen bg-primary-0">
-    <div class="back-area fixed top-0 left-0 w-full py-4 px-5 sm:px-6 flex items-center justify-center bg-primary-0">
-        <div class="back-area-icon absolute left-4 top-4">
+<div class="container min-h-screen bg-primary-0 pb-[75px]">
+    <div class="back-area max-w-[450px] mx-auto fixed top-0 right-0 left-0 w-full px-[28px] pt-[20px] flex items-center justify-center bg-primary-0">
+        <div class="back-area-icon absolute left-[28px] top-[20px]">
             <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt="">
         </div>
         <div class="back-area-text w-full text-center">
@@ -8,46 +8,46 @@
         </div>
     </div>
 
-    <div class="section-account pb-4 px-4 sm:px-6 pt-16">
+    <div class="section-account pb-4 px-[28px] pt-[67px]">
         <div class="section-account-main">
             <div class="user-profile">
                 {{> components/user_profile}}
             </div>
 
 
-            <div class="account-menu mt-10">
+            <div class="account-menu mt-[60px]">
                 <ul>
-                    <li class="mb-4">
+                    <li class="mb-5">
                         <a href="#"
-                            class="flex items-center justify-between bg-primary-0.1 py-3 px-5 font-satoshi font-medium text-sm text-primary-10 rounded-3xl">
-                            <span class="flex items-center justify-start gap-2"><img class="w-5 h-5"
+                            class="flex items-center h-[52px] justify-between bg-primary-0.1 py-3 px-5 font-satoshi font-medium text-sm/[20px] text-primary-10 rounded-3xl">
+                            <span class="flex items-center justify-start gap-4"><img class="w-5 h-5"
                                     src="/images/svg/inquiry.svg" alt=""> Inquiry</span>
                             <img class="w-5 h-5" src="/images/svg/arrow-right.svg" alt="">
                         </a>
                     </li>
 
-                    <li class="mb-4">
-                        <a href="#"
-                            class="flex items-center justify-between bg-primary-0.1 py-3 px-5 font-satoshi font-medium text-sm text-primary-10 rounded-3xl">
-                            <span class="flex items-center justify-start gap-2"><img class="w-5 h-5"
+                    <li class="mb-5">
+                        <a href="noticeList.html"
+                            class="flex items-center h-[52px] justify-between bg-primary-0.1 py-3 px-5 font-satoshi font-medium text-sm/[20px] text-primary-10 rounded-[20px]">
+                            <span class="flex items-center justify-start gap-4"><img class="w-5 h-5"
                                     src="/images/svg/notice.svg" alt=""> Notice</span>
                             <img class="w-5 h-5" src="/images/svg/arrow-right.svg" alt="">
                         </a>
                     </li>
 
-                    <li class="mb-4">
-                        <a href="#"
-                            class="flex items-center justify-between bg-primary-0.1 py-3 px-5 font-satoshi font-medium text-sm text-primary-10 rounded-3xl">
-                            <span class="flex items-center justify-start gap-2"><img class="w-5 h-5"
+                    <li>
+                        <a href="resetPassword.html"
+                            class="flex items-center h-[52px] justify-between bg-primary-0.1 py-3 px-5 font-satoshi font-medium text-sm/[20px] text-primary-10 rounded-[20px]">
+                            <span class="flex items-center justify-start gap-4"><img class="w-5 h-5"
                                     src="/images/svg/reset_password.svg" alt=""> Reset password</span>
                             <img class="w-5 h-5" src="/images/svg/arrow-right.svg" alt="">
                         </a>
                     </li>
 
                 </ul>
-                <div class="log-out-btn mt-16">
+                <div class="log-out-btn mt-[80px]">
                     <a
-                        class="text-center block w-full bg-primary-0.4 py-3 px-5 font-satoshi font-medium text-sm text-primary-10 rounded-3xl">Log
+                        class="text-center h-[56px] flex items-center justify-center w-full bg-primary-0.4 py-3 px-5 font-satoshi font-bold text-base/[20px] text-primary-10 rounded-[20px]">Log
                         out</a>
                 </div>
             </div>
