--- a/src/views/partials/index_body.hbs
+++ b/src/views/partials/index_body.hbs
@@ -1,6 +1,6 @@
 <div class="container min-h-screen  bg-primary-0">
     <div class="section">
-        <div class="section-top text-right py-4 sm:px-6 px-4 mb-[12px]">
+        <div class="section-top text-right pt-[20px] pr-[27px] mb-[28px]">
             <span class="font-satoshi font-bold text-primary block cursor-pointer text-[15px]/[20px]">Skip</span>
         </div>
         <div class="section-main">
@@ -17,8 +17,10 @@
                     coverage of
                     Soccer, basketball, baseball, E-sport Livescore keeps you well informed of live
                     scores</p>
-                <button
-                    class="text-base/[20px] mt-[28px] bg-primary h-[56px] flex items-center justify-center w-full text-primary-0 font-satoshi font-bold py-3 px-4 rounded-[20px]">Next</button>
+                <a href="signIn.html"
+                    class="text-base/[20px] mt-[28px] bg-primary h-[56px] flex items-center justify-center w-full text-primary-0 font-satoshi font-bold py-3 px-4 rounded-[20px]">
+                    Next
+                </a>
             </div>
         </div>
     </div>
