--- a/src/views/partials/notice_details_body.hbs
+++ b/src/views/partials/notice_details_body.hbs
@@ -1,7 +1,7 @@
 <div class="container min-h-screen bg-primary-0">
     <div class="back-area fixed top-0 left-0 w-full py-4 px-5 sm:px-6 flex items-center justify-center bg-primary-0">
         <div class="back-area-icon absolute left-4 top-4">
-            <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt="">
+            <a href="noticeList.html"><img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt=""></a>
         </div>
         <div class="back-area-text w-full text-center">
             <h3 class="font-satoshi font-bold text-20/[23px] text-primary-10">Notice Details</h3>
