--- a/src/views/partials/sign_in_body.hbs
+++ b/src/views/partials/sign_in_body.hbs
@@ -35,8 +35,8 @@
                 </div>
 
                 <div class="create-account mt-[64px] flex justify-between items-center pb-[40px]   px-[28px]">
-                     <a href="#" class="text-primary-1 text-base font-satoshi font-bold not-italic">Sign Up</a>
-                     <a href="#" class="text-primary text-base font-satoshi font-bold not-italic">Forgot password</a>
+                     <a href="signUp.html" class="text-primary-1 text-base font-satoshi font-bold not-italic">Sign Up</a>
+                     <a href="forgotPassword.html" class="text-primary text-base font-satoshi font-bold not-italic">Forgot password</a>
                 </div>
             </form>
         </div>
