--- a/src/views/partials/sign_up_body.hbs
+++ b/src/views/partials/sign_up_body.hbs
@@ -8,8 +8,8 @@
   <div class="sign-up-area">
     <div class="sign-up-area-title px-[27px] pt-[30px] pb-[20px] mb-[20px]">
       <h3 class="font-satoshi font-bold not-italic text-26/[44px] mb-[12px] ">Let’s sign you up.</h3>
-      <p class="text-primary-1 text-[14px]/[20px] font-satoshi font-medium not-italic">Already have an account? <span
-          class="text-primary font-satoshi font-bold not-italic">Sign in here.</span></p>
+      <p class="text-primary-1 text-[14px]/[20px] font-satoshi font-medium not-italic">Already have an account? 
+      <a href="signIn.html" class="text-primary font-satoshi font-bold not-italic">Sign in here.</a></p>
     </div>
     <div class="sign-form-area">
       <form action="">
@@ -40,8 +40,7 @@
 
           <div class="sub-btn w-full">
             <button
-              class="border-0 outline-none py-1 flex items-center justify-center h-[56px] px-8 bg-primary text-primary-0 font-satoshi font-medium rounded-s-[20px] w-full cursor-pointer text-[16px]/[20px]">Sign
-              Up</button>
+              class="border-0 outline-none py-1 flex items-center justify-center h-[56px] px-8 bg-primary text-primary-0 font-satoshi font-medium rounded-s-[20px] w-full cursor-pointer text-[16px]/[20px]">Create Account</button>
           </div>
         </div>
 
