--- a/src/views/partials/user_about_body.hbs
+++ b/src/views/partials/user_about_body.hbs
@@ -1,16 +1,16 @@
-<div class="container min-h-screen bg-primary-0.1">
-    <div class="back-area fixed top-0 left-0 w-full py-4 px-5 sm:px-6 flex items-center justify-center bg-primary-0.1">
-        <div class="back-area-icon absolute left-4 top-4">
+<div class="container min-h-screen bg-primary-0.1 pb-[51px]">
+      <div class="back-area max-w-[450px] mx-auto fixed top-0 right-0 left-0 w-full px-[24px] pt-[24px] flex items-center justify-start">
+        <div class="back-area-icon">
             <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt="">
         </div>
     </div>
 
-    <div class="section-account pb-4  pt-1">
+    <div class="section-account pb-4  pt-[68px]">
         <div class="section-account-main">
-            <div class="user-profile px-4 sm:px-6" >
+            <div class="user-profile px-[28px]">
                 {{> components/user_profile}}
             </div>
-            <div class="account-about bg-primary-0 px-4 sm:px-6 pt-6 pb-16 min-h-96 rounded-t-2xl shadow-custom-2 mt-7">
+            <div class="account-about bg-primary-0 px-[28px]  pt-[28px] pb-[20px] overflow-y-auto  rounded-t-[20px] shadow-custom-2 mt-[56px]">
                 <h3 class="font-satoshi font-bold mb-3 text-primary-10 text-20/[30px]">About</h3>
                 <p class="font-satoshi font-medium not-italic text-primary-1 text-sm/[25px] mb-4">I am Thai Dieu. I am Owner of SERO currently pursuing a major in Management Economics and Finance at the University of Guelph, Ontario, Canada. Please let me know if I can help you in any way.This helps remove loose dirt, dust, and debris from surface and crevices of the sofa.Different  materials and finishes require specific care,</p>
             </div>
