--- a/src/views/partials/components/user_profile.hbs
+++ b/src/views/partials/components/user_profile.hbs
@@ -1,14 +1,14 @@
-<div class="user-info w-full py-4">
+<div class="user-info w-full">
     <div class="user-img w-28 h-28 mx-auto rounded-full relative flex items-center justify-center mb-1">
-        <img src="/images/png/user-profile.png" class="w-24 h-24 rounded-full" alt="">
+        <img src="/images/png/user-profile.png" class="w-[94px] h-[94px] rounded-full" alt="">
         <img class="absolute top-0 left-0" src="/images/png/user-shape.png" alt="">
     </div>
-    <div class="user-body text-center">
+    <div class="user-body text-center mt-[8px]">
         <h3 class="font-satoshi font-medium text-primary-10 text-lg">Lukas D.</h3>
-        <span class="block font-satoshi font-medium text-sm text-primary-1 not-italic mt-1">Owner of
+        <span class="block font-satoshi font-medium text-[14px]/[20px] text-primary-1 not-italic mt-[2px]">Owner of
             SERO</span>
         <button
-            class="bg-primary block mx-auto font-satoshi font-medium text-primary-0 text-xs py-1 px-2 rounded-lg mt-1">View
+            class="bg-primary block mx-auto font-satoshi font-medium text-primary-0 text-xs/[20px] py-[3px] px-[13px] rounded-[10px] mt-[8px]">View
             Profile</button>
     </div>
 </div>
