--- a/src/views/partials/reset_password_body.hbs
+++ b/src/views/partials/reset_password_body.hbs
@@ -1,7 +1,7 @@
-<div class="container min-h-screen bg-primary-0">
+<div class="container min-h-screen bg-primary-0 flex justify-between flex-col">
     <div class="back-area py-4 px-[26px]">
         <div class="back-area-icon">
-            <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt="">
+            <a href="account.html"><img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt=""></a>
         </div>
     </div>
     <div class="forgot-section mt-[35px]  px-[26px]">
@@ -33,12 +33,13 @@
                     </div>
 
                 </div>
-                <div class="sub-btn mt-[170px]">
-                    <button
-                        class="bg-primary py-1 rounded-[20px] px-3 flex items-center justify-center h-[56px] font-satoshi font-bold text-primary-0 w-full text-base">Change
-                        Password</button>
-                </div>
+
             </form>
         </div>
+    </div>
+    <div class="sub-btn  px-[26px] pb-[24px] mt-[100px]">
+        <button
+            class="bg-primary py-1 rounded-[20px] px-3 flex items-center justify-center h-[56px] font-satoshi font-bold text-primary-0 w-full text-base">Change
+            Password</button>
     </div>
 </div>
