account page and user information page issue solving

--- a/src/views/partials/components/user_profile.hbs
+++ b/src/views/partials/components/user_profile.hbs
@@ -7,8 +7,8 @@
         <h3 class="font-satoshi font-medium text-primary-10 text-lg">Lukas D.</h3>
         <span class="block font-satoshi font-medium text-[14px]/[20px] text-primary-1 not-italic mt-[2px]">Owner of
             SERO</span>
-        <button
-            class="bg-primary block mx-auto font-satoshi font-medium text-primary-0 text-xs/[20px] py-[3px] px-[13px] rounded-[10px] mt-[8px]">View
-            Profile</button>
+        <a href="userInformation.html"
+            class="bg-primary  mx-auto font-satoshi font-medium inline-block text-primary-0 text-xs/[20px] py-[3px] px-[13px] rounded-[10px] mt-[8px]">View
+            Profile</a>
     </div>
 </div>
