issue solved all page

--- a/src/views/partials/notice_details_body.hbs
+++ b/src/views/partials/notice_details_body.hbs
@@ -1,6 +1,6 @@
-<div class="container min-h-screen bg-primary-0">
-    <div class="back-area fixed top-0 left-0 w-full py-4 px-5 sm:px-6 flex items-center justify-center bg-primary-0">
-        <div class="back-area-icon absolute left-4 top-4">
+<div class="container min-h-screen bg-primary-0 pb-[10px]">
+    <div class="back-area max-w-[450px] mx-auto fixed top-0 right-0 left-0 w-full px-[25px] py-[15px] flex items-center justify-center bg-primary-0">
+        <div class="back-area-icon absolute left-[28px] top-[15px]">
             <a href="noticeList.html"><img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt=""></a>
         </div>
         <div class="back-area-text w-full text-center">
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-    <div class="section-details pb-4 px-4 sm:px-6 pt-20">
+    <div class="section-details px-[25px] pt-[65px] pb-[10px]">
         <div class="section-details-main">
 
             <div class="notice-details-img mb-3">
