--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,10 +4,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 @import'./swipper';
-// @import "@fortawesome/fontawesome-free/scss/fontawesome";
-// @import "@fortawesome/fontawesome-free/scss/solid";
-// @import "@fortawesome/fontawesome-free/scss/regular";
-// @import "@fortawesome/fontawesome-free/scss/brands";
+@import'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css';
 @import'./font';
 @import "base";
 @import'./about_page';
