--- a/src/views/partials/components/bottom_nav.hbs
+++ b/src/views/partials/components/bottom_nav.hbs
@@ -1,37 +1,37 @@
-<div class="bottom-nav bg-primary-0 fixed bottom-0 max-w-[450px] right-0 mx-auto left-0 w-full h-auto shadow-custom py-2">
+<div class="bottom-nav bg-primary-0 fixed bottom-0 max-w-[450px] right-0 mx-auto left-0 w-full h-auto shadow-custom pt-[13px] pb-[7px]">
     <div class="container min-h-auto ">
         <div class="bottom-nav-main">
             <ul class="flex items-center justify-between gap-3">
-                <li class="w-full text-center flex  justify-center flex-col py-1 px-1">
+                <li class="w-full text-center flex justify-center items-center gap-[11px] flex-col py-1 px-1">
                     <div class="icon">
                         <img src="/images/svg/home.svg" alt="" class="w-5 h-5 m-auto">
                     </div>
                     <div class="text">
-                        <span class="font-satoshi font-medium text-xs text-primary-0.5">Home</span>
+                        <span class="font-satoshi font-medium text-xs/[22px] text-primary-0.5">Home</span>
                     </div>
                 </li>
-                <li class="w-full text-center flex  justify-center flex-col py-1 px-1">
+                <li class="w-full text-center flex justify-center items-center gap-[11px] flex-col py-1 px-1">
                     <div class="icon">
                         <img src="/images/svg/post.svg" alt="" class="w-5 h-5 m-auto">
                     </div>
                     <div class="text">
-                        <span class="font-satoshi font-medium text-xs text-primary-0.5">Post</span>
+                        <span class="font-satoshi font-medium text-xs/[22px] text-primary-0.5">Post</span>
                     </div>
                 </li>
-                <li class="w-full text-center flex  justify-center flex-col py-1 px-2">
+                <li class="w-full text-center flex justify-center items-center gap-[11px] flex-col py-1 px-1">
                     <div class="icon">
                         <img src="/images/svg/user.svg" alt="" class="w-5 h-5 m-auto">
                     </div>
                     <div class="text">
-                        <span class="font-satoshi font-medium text-xs text-primary-0.5">Account</span>
+                        <span class="font-satoshi font-medium text-xs/[22px] text-primary-0.5">Account</span>
                     </div>
                 </li>
-                <li class="w-full text-center flex  justify-center flex-col py-1 px-2">
+                <li class="w-full text-center flex justify-center items-center gap-[11px] flex-col py-1 px-1">
                     <div class="icon">
                         <img src="/images/svg/setting.svg" alt="" class="w-5 h-5 m-auto">
                     </div>
                     <div class="text">
-                        <span class="font-satoshi font-medium text-xs text-primary-0.5">Setting</span>
+                        <span class="font-satoshi font-medium text-xs/[22px] text-primary-0.5">Setting</span>
                     </div>
                 </li>
             </ul>
