--- a/src/views/partials/components/notice_card.hbs
+++ b/src/views/partials/components/notice_card.hbs
@@ -1,5 +1,121 @@
 <a href="noticeDetails.html">
-    <div class="list-card mb-4 bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+    <div class="list-card mb-[10px] bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+    <div class="list-card-img">
+        <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
+    </div>
+    <div class="list-card-body">
+        <span class="font-satoshi font-medium not-italic text-primary-1 text-sm">22/09/2023</span>
+        <h3 class="font-satoshi font-medium not-italic text-18/[23px] text-primary-10">It's important to
+            follow the manufacturer's </h3>
+    </div>
+</div>
+</a>
+<a href="noticeDetails.html">
+    <div class="list-card mb-[10px] bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+    <div class="list-card-img">
+        <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
+    </div>
+    <div class="list-card-body">
+        <span class="font-satoshi font-medium not-italic text-primary-1 text-sm">22/09/2023</span>
+        <h3 class="font-satoshi font-medium not-italic text-18/[23px] text-primary-10">It's important to
+            follow the manufacturer's </h3>
+    </div>
+</div>
+</a>
+
+<a href="noticeDetails.html">
+    <div class="list-card mb-[10px] bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+    <div class="list-card-img">
+        <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
+    </div>
+    <div class="list-card-body">
+        <span class="font-satoshi font-medium not-italic text-primary-1 text-sm">22/09/2023</span>
+        <h3 class="font-satoshi font-medium not-italic text-18/[23px] text-primary-10">It's important to
+            follow the manufacturer's </h3>
+    </div>
+</div>
+</a>
+
+<a href="noticeDetails.html">
+    <div class="list-card mb-[10px] bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+    <div class="list-card-img">
+        <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
+    </div>
+    <div class="list-card-body">
+        <span class="font-satoshi font-medium not-italic text-primary-1 text-sm">22/09/2023</span>
+        <h3 class="font-satoshi font-medium not-italic text-18/[23px] text-primary-10">It's important to
+            follow the manufacturer's </h3>
+    </div>
+</div>
+</a>
+
+<a href="noticeDetails.html">
+    <div class="list-card mb-[10px] bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+    <div class="list-card-img">
+        <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
+    </div>
+    <div class="list-card-body">
+        <span class="font-satoshi font-medium not-italic text-primary-1 text-sm">22/09/2023</span>
+        <h3 class="font-satoshi font-medium not-italic text-18/[23px] text-primary-10">It's important to
+            follow the manufacturer's </h3>
+    </div>
+</div>
+</a>
+
+<a href="noticeDetails.html">
+    <div class="list-card mb-[10px] bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+    <div class="list-card-img">
+        <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
+    </div>
+    <div class="list-card-body">
+        <span class="font-satoshi font-medium not-italic text-primary-1 text-sm">22/09/2023</span>
+        <h3 class="font-satoshi font-medium not-italic text-18/[23px] text-primary-10">It's important to
+            follow the manufacturer's </h3>
+    </div>
+</div>
+</a>
+
+<a href="noticeDetails.html">
+    <div class="list-card mb-[10px] bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+    <div class="list-card-img">
+        <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
+    </div>
+    <div class="list-card-body">
+        <span class="font-satoshi font-medium not-italic text-primary-1 text-sm">22/09/2023</span>
+        <h3 class="font-satoshi font-medium not-italic text-18/[23px] text-primary-10">It's important to
+            follow the manufacturer's </h3>
+    </div>
+</div>
+</a>
+
+<a href="noticeDetails.html">
+    <div class="list-card mb-[10px] bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+    <div class="list-card-img">
+        <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
+    </div>
+    <div class="list-card-body">
+        <span class="font-satoshi font-medium not-italic text-primary-1 text-sm">22/09/2023</span>
+        <h3 class="font-satoshi font-medium not-italic text-18/[23px] text-primary-10">It's important to
+            follow the manufacturer's </h3>
+    </div>
+</div>
+</a>
+
+<a href="noticeDetails.html">
+    <div class="list-card mb-[10px] bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
+    <div class="list-card-img">
+        <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
+    </div>
+    <div class="list-card-body">
+        <span class="font-satoshi font-medium not-italic text-primary-1 text-sm">22/09/2023</span>
+        <h3 class="font-satoshi font-medium not-italic text-18/[23px] text-primary-10">It's important to
+            follow the manufacturer's </h3>
+    </div>
+</div>
+</a>
+
+<a href="noticeDetails.html">
+    <div class="list-card mb-[10px] bg-primary-0 rounded-20  sm:p-5 p-4 flex items-center justify-start gap-3 shadow-custom-1">
     <div class="list-card-img">
         <img class="rounded-lg min-w-20" src="/images/png/list1.png" alt="">
     </div>
